// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWS Error Object 1`] = `
Object {
  "err": Object {
    "message": "Ded 3",
    "name": "Error",
    "stack": "Error: Ded 3
    at Object.<anonymous> (/srv/test/__tests__/aws.test.ts:32:18)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:390:28)",
  },
  "hostname": "testhost",
  "level": 50,
  "msg": "Ded 3",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`AWS Lambda Error Object 1`] = `
Object {
  "err": Object {
    "message": "Ded 4",
    "name": "Error",
    "stack": "Error: Ded 4
    at Object.<anonymous> (/srv/test/__tests__/aws.test.ts:23:18)
    at Promise.then.completed (/srv/test/node_modules/jest-circus/build/utils.js:390:28)",
  },
  "hostname": "testhost",
  "level": 50,
  "msg": "Ded 4",
  "pid": 1337,
  "time": 1234567890000,
}
`;

exports[`AWS Lambda Logger + contextId 1`] = `
Object {
  "_context": Object {
    "stuff": true,
  },
  "_contextId": "testContextId",
  "hostname": "testhost",
  "level": 40,
  "msg": "hello",
  "pid": 1337,
  "time": 1234567890000,
}
`;
